@@ -534,6 +534,7 @@ All:
 
 All (GUI):
 
+- Respect window max size in wxBoxSizer (Nathan Ridge).
 - Add possibility to hide and show again wxRibbonBar pages (wxBen).
 - Add expand/collapse button to wxRibbonBar (rakeshthp).
 - Fix item data access in wxDataViewListCtrl (Kry).
